# capigrad

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  btcusdt_1h_5year.csv  cgt_mie.cpp  cmake_install.cmake  config.txt  engine.py  feed.py  fetch_btc.py  labeler.py  live_log.csv  live_rf.hpp  live_train_data.csv  mie  mie1  nn.py  research.py  train.py
include/: data.hpp  features.hpp  globals.hpp  live.hpp  model.hpp  nn.hpp  trainer.hpp
src/: data.cpp  features.cpp  live.cpp  main.cpp  model.cpp  nn.cpp  trainer.cpp
